add in_json with MIT jsmn WIP
as a submodule

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,11 +38,13 @@ LTEXEC = @LTEXEC@
 VALGRIND_SUPPRESSIONS = @VALGRIND_SUPPRESSIONS@
 VALGRIND_SUPPRESSIONS_FILE = @VALGRIND_SUPPRESSIONS_FILE@
 VALGRIND_OPTS = --leak-check=full --show-reachable=no --num-callers=30
+JSON_DIST = jsmn/jsmn.c jsmn/jsmn.h jsmn/LICENSE jsmn/README.md
 EXTRA_DIST = $(top_srcdir)/.version \
              README \
 	     dwg.in dxf.in dxf-allcvt.lsp dxf-allcvt.sh test-dxf.sh \
 	     log.in logs-all-parallel.sh.in logs-all-serial.sh.in unknown.sh \
 	     build-aux/swig_python.patch \
+             $(JSON_DIST) \
 	     $(VALGRIND_SUPPRESSIONS_FILE)
 
 .PHONY: check-dwg check-dxf check-dwg-valgrind \
